# muxi-rust

./: .gitignore  Cargo.toml  README.md  USER_GUIDE.md
.github/workflows/: rust-ci.yml  rust-rc.yml  rust-release.yml
src/: auth.rs  errors.rs  formation_client.rs  lib.rs  server_client.rs  version.rs  version_check.rs  webhook.rs
tests/: integration_test.rs
