[package]
name = "muxi-rust"
version = "0.1.0"
edition = "2021"
authors = ["MUXI AI <support@muxi.ai>"]
description = "Rust SDK for MUXI AI platform"
license = "MIT"
repository = "https://github.com/muxi-ai/muxi-rust"
documentation = "https://docs.rs/muxi-rust"
readme = "README.md"
keywords = ["muxi", "ai", "sdk", "agents"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
async-stream = "0.3"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
